force-app/main/default/objects/NSSales_Email__c/NSSales_Email__c.object-meta.xml
<CustomObject>
    <label>Email</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>