force-app/main/default/objects/NSSales_Email__c/fields/NSSales_CcAddress__c.field-meta.xml
<CustomField>
    <fullName>NSSales_CcAddress__c</fullName>
    <label>CC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>