force-app/main/default/objects/NSSales_Email__c/fields/NSSales_FromAddress__c.field-meta.xml
<CustomField>
    <fullName>NSSales_FromAddress__c</fullName>
    <label>From Address</label>
    <type>Email</type>
</CustomField>