force-app/main/default/objects/NSSales_Email__c/fields/NSSales_FromName__c.field-meta.xml
<CustomField>
    <fullName>NSSales_FromName__c</fullName>
    <label>From Name</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>