force-app/main/default/objects/NSSales_Email__c/fields/NSSales_HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>NSSales_HtmlBody__c</fullName>
    <label>HtmlBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>