force-app/main/default/objects/NSSales_Email__c/fields/NSSales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <type>Lookup</type>
</CustomField>