force-app/main/default/objects/NSSales_Email__c/fields/NSSales_Subject__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Subject__c</fullName>
    <label>Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>