force-app/main/default/objects/NSSales_Email__c/fields/NSSales_TextBody__c.field-meta.xml
<CustomField>
    <fullName>NSSales_TextBody__c</fullName>
    <label>Text Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>