force-app/main/default/objects/NSSales_Email__c/fields/NSSales_ToAddress__c.field-meta.xml
<CustomField>
    <fullName>NSSales_ToAddress__c</fullName>
    <label>To Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>